--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
     "url": "***REMOVED***"
   },
   "author": "Jerry Krusinski <jkruzr@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "aws-sdk": "^2.4.4",
+    "ipify": "^1.1.0",
+    "promise": "^7.1.1",
+    "winston": "^2.2.0"
+  }
 }
